--- a/bundle/zh-tw/constant.properties
+++ b/bundle/zh-tw/constant.properties
@@ -4,3 +4,4 @@ site_login_title 	=  WMS - 登錄
 meta_login_keywords =  weight,zara-weight,zara-login;
 meta_login_title 	=  wms-login;
 meta_login_desc 	=  Lorem Ipsum;
+loading_message 	= Please wait... 
