--- a/bundle/en-us/constant.properties
+++ b/bundle/en-us/constant.properties
@@ -5,3 +5,4 @@ meta_login_keywords =  weight,zara-weight,zara-login;
 meta_login_title 	=  wms-login;
 meta_login_desc 	=  Lorem Ipsum;
 loading_message 	= Please wait... 
+page_no				= Total pages are : {0}
