Commit Plugin and css code

--- a/file/form_configuration.json
+++ b/file/form_configuration.json
@@ -1,152 +1,153 @@
-{    
-	"errorcode": 0,
-	"returnobject": {
-		"forminfo":{  
-			"caption":"Add Container Inventory",
-			"formTag":{
-				"method":"POST",
-				"name":"addContainerInventory",
-				"action":"../containerInventory/addContainerInventory"
-			},
-			"formElements":[  
-			   	{  
-				  "labelkey": "containerInventory.containerNumber",
-			        "type":"text",
-			        "name":"containerNumber",
-			         "tabindex":"1",
-			         "defaultvalue":"",
-			         "validation":"r"
-			      },
-			      {  
-			        "labelkey": "containerInventory.containerCycle",
-			        "type":"text",
-			        "name":"containerCycle",
-			         "tabindex":"2",
-			         "defaultvalue":"",
-			         "validation":"r,n"
-			      },
-	  			{  
-		              "labelkey": "containerInventory.email",
-			        "type":"text",
-			        "name":"email",
-			         "tabindex":"3",
-			         "defaultvalue":"",
-			         "validation":"r,e"
-			    },
-			    {  
-				"labelkey": "containerInventory.vgm",
-			      "type":"text",
-			      "name":"vgm",
-			      "tabindex":"4",
-			      "defaultvalue":"",
-			      "validation":"r,n"
-			    },
-		          {  
-			      "labelkey": "containerInventory.address",
-			      "type":"textarea",
-			      "name":"address",
-			      "tabindex":"5",
-				"rows":"10",
-				"cols":"5",
-			      "defaultvalue":"",
-			      "validation":""
-			   },
-	  		    {  
-				"labelkey": "containerInventory.shippingStatus",
-			      "type":"dropdown",
-			      "name":"shippingStatus",
-			      "tabindex":"6",
-			      "defaultvalue":[
-			            {  
-			               "key":102,
-			               "value":"Departed"
-			            },
-			            {  
-			               "key":105,
-			               "value":"Not Departed"
-			            }
-				],
-			      "validation":"r"
-			  },
-      			  {  
-		          “labelkey":"containerInventory.containerStatus",
-		          "type":"radio",
-			    "name":"containerStatus",
-		          "tabindex":"7",
-			    "switch":true,
-		          "defaultvalue":[  
-				{  
-		               "labelkey":"containerInventory.containerStatus.active",
-            			   "value":"active"
-            			},
-		            {  
-            			   "labelkey":"containerInventory.containerStatus.inActive",
-		               "value":"InActive",
-            			},
-			     ],
-		         "validation":"r"
-		      },
-		      {  
-			  "labelkey":"containerInventory.daysOfGP",
-		        "type":"checkbox",
-		        "name":"daysOfGP",
-		        "tabindex":"8",
-		        "defaultvalue":[  
-            			{  
-		               "label":"containerInventory.daysOfGP.Days",
-            			   "value":"days"
-		            },
-            			{  
-		               "label":"containerInventory.daysOfGP.Week",
-            			   "value":"week"
-            			},
-		            {  
-            			   "label":"containerInventory.daysOfGP.Month",
-		               "value":"month"
-            			}
-		         ],
-		       "validation":"r"
-		      },
-		      {  
-			 "labelkey":"containerInventory.vgmMeasuredDate",
-		       "type":"text",
-		       "name":"vgmMeasuredDate",
-			 "tabindex":"9",
-      			 "format":"date",
-			 "defaultvalue":"",
-		       "dateFormat":"d/m/yyyy",
-		       "minDate":"24/12/2015",
-		       "validation":"r"
-		      },
-		      {  
-			 "labelkey":"containerInventory.containerImage",
-		       "type":"file",
-		       "name":"containerImage",
-			 "tabindex":"10",
-		       "multiple":true,
-		       "validation":"r",
-		       "image":{  
-				"accept":"jpg,png",
-				"size":"5MB"
-		         }
-     		      }
-	   ],
-   	"formButtons":[  
-      		{  
-         		"submit":{  
-	            		"keyname":"btnSubmit",
-      		      		"keyvalue":"containerInventory.btnAddContainerInventory"
-	      		},
-      			"reset":{  
-		            "keyname":"btnReset",
-      			      "keyvalue":"containerInventory.btnResetContainerInventory"
-	         	},
-		      "cancel":{  
-            			“keyname":"btnCancel",
-	            		"keyvalue":"containerInventory.btnCancelContainerInventory"
-         		}
-      		}
-   	  ]
-	}
+{  
+   "errorCode":"​0",
+   "successMessage":"response_success",
+   "returnObject":{  
+      "forminfo":{  
+         "formElements":[  
+            {  
+               "labelkey":"containerInventory.containerNumber",
+               "validation":"r",
+               "name":"containerNumber",
+               "tabindex":"1",
+               "type":"text",
+               "defaultvalue":""
+            },
+            {  
+               "labelkey":"containerInventory.containerCycle",
+               "validation":"r,n",
+               "name":"containerCycle",
+               "tabindex":"2",
+               "type":"text",
+               "defaultvalue":""
+            },
+            {  
+               "labelkey":"containerInventory.email",
+               "validation":"r,e",
+               "name":"email",
+               "tabindex":"3",
+               "type":"text",
+               "defaultvalue":""
+            },
+            {  
+               "labelkey":"containerInventory.vgm",
+               "validation":"r,n",
+               "name":"vgm",
+               "tabindex":"4",
+               "type":"text",
+               "defaultvalue":""
+            },
+            {  
+               "cols":"5",
+               "labelkey":"containerInventory.address",
+               "validation":"",
+               "name":"address",
+               "tabindex":"5",
+               "type":"textarea",
+               "defaultvalue":"",
+               "rows":"10"
+            },
+            {  
+               "labelkey":"containerInventory.shippingStatus",
+               "validation":"r",
+               "name":"shippingStatus",
+               "tabindex":"6",
+               "type":"dropdown",
+               "defaultvalue":[  
+                  {  
+                     "value":"Departed",
+                     "key":"102"
+                  },
+                  {  
+                     "value":"Not Departed",
+                     "key":"105"
+                  }
+               ]
+            },
+            {  
+               "labelkey":"containerInventory.containerStatus",
+               "validation":"r",
+               "name":"containerStatus",
+               "tabindex":"7",
+               "switch":"true",
+               "type":"radio",
+               "defaultvalue":[  
+                  {  
+                     "labelkey":"containerInventory.containerStatus.active",
+                     "value":"active"
+                  },
+                  {  
+                     "labelkey":"containerInventory.containerStatus.inActive",
+                     "value":"InActive"
+                  }
+               ]
+            },
+            {  
+               "labelkey":"containerInventory.daysOfGP",
+               "validation":"r",
+               "name":"daysOfGP",
+               "tabindex":"8",
+               "type":"checkbox",
+               "defaultvalue":[  
+                  {  
+                     "value":"days",
+                     "label":"containerInventory.daysOfGP.Days"
+                  },
+                  {  
+                     "value":"week",
+                     "label":"containerInventory.daysOfGP.Week"
+                  },
+                  {  
+                     "value":"month",
+                     "label":"containerInventory.daysOfGP.Month"
+                  }
+               ]
+            },
+            {  
+               "labelkey":"containerInventory.vgmMeasuredDate",
+               "validation":"r",
+               "name":"vgmMeasuredDate",
+               "tabindex":"9",
+               "minDate":"24/12/2015",
+               "dateFormat":"d/m/yyyy",
+               "format":"date",
+               "type":"text",
+               "defaultvalue":""
+            },
+            {  
+               "labelkey":"containerInventory.containerImage",
+               "validation":"r",
+               "name":"containerImage",
+               "tabindex":"10",
+               "image":{  
+                  "accept":"jpg,png",
+                  "size":"5MB"
+               },
+               "type":"file",
+               "multiple":"true"
+            }
+         ],
+         "formButtons":[  
+            {  
+               "submit":{  
+                  "keyvalue":"containerInventory.btnAddContainerInventory",
+                  "keyname":"btnSubmit"
+               },
+               "reset":{  
+                  "keyvalue":"containerInventory.btnResetContainerInventory",
+                  "keyname":"btnReset"
+               },
+               "cancel":{  
+                  "keyvalue":"containerInventory.btnCancelContainerInventory",
+                  "keyname":"btnCancel"
+               }
+            }
+         ],
+         "formTag":{  
+            "name":"addContainerInventory",
+            "action":"../containerInventory/addContainerInventory",
+            "method":"POST"
+         },
+         "caption":"Add Container Inventory"
+      }
    }
 }
