commit changes by Jhalak on 06-01-2015

--- a/file/form_configuration.json
+++ b/file/form_configuration.json
@@ -10,7 +10,17 @@
                "name":"containerNumber",
                "labelKey":"containerInventory.containerNumber",
                "defaultValue":"",
-               "type":"text"
+               "type":"text",
+			   "additional" : 
+				   {  
+					   "validation":"r",
+					   "tabIndex":"1",
+					   "name":"containerNumber",
+					   "labelKey":"containerInventory.containerNumber",
+					   "defaultValue":"",
+					   "type":"text"
+					}
+			   
             },
             {  
                "validation":"r,n",
