--- a/bundle/en-us/constant.properties
+++ b/bundle/en-us/constant.properties
@@ -6,3 +6,6 @@ meta_login_title 	=  wms-login;
 meta_login_desc 	=  Lorem Ipsum;
 loading_message 	= Please wait... 
 page_no				= Total pages are : {0}
+click_me 			= Click Me
+select_file 		= Select File
+choose_file 		= Choose File
