--- a/file/form_configuration.json
+++ b/file/form_configuration.json
@@ -6,7 +6,7 @@
          "formElements":[  
             {  
 				 "labelKey":"containerInventory.containerNumber",
-               "multiple":[  
+               "multiLevel":[  
                   {  
                      "validation":"r",
                      "tabIndex":"1",
