--- a/bundle/en-us/constant.properties
+++ b/bundle/en-us/constant.properties
@@ -6,6 +6,9 @@ meta_login_title 	=  wms-login;
 meta_login_desc 	=  Lorem Ipsum;
 loading_message 	= Please wait... 
 page_no				= Total pages are : {0}
-click_me 			= Click Me
-select_file 		= Select File
-choose_file 		= Choose File
+pagination.page     = Page
+pagination.page_of  = Of
+pagination.page_view  = View
+pagination.page_records  = records
+pagination.page_records_found  = Total ##total_records## records found
+
