Commit by Jhalak for language changes

--- a/bundle/en-us/constant.properties
+++ b/bundle/en-us/constant.properties
@@ -11,4 +11,6 @@ pagination.page_of  = Of
 pagination.page_view  = View
 pagination.page_records  = records
 pagination.page_records_found  = Total ##total_records## records found
-
+click_me 			= Click Me
+select_file 		= Select File
+choose_file 		= Choose File
