Change multiple file text for language

--- a/bundle/en-us/constant.properties
+++ b/bundle/en-us/constant.properties
@@ -1,16 +1,26 @@
 # Comments will be goes here
 
-site_login_title 	= WMS - Login
-meta_login_keywords =  weight,zara-weight,zara-login;
-meta_login_title 	=  wms-login;
-meta_login_desc 	=  Lorem Ipsum;
-loading_message 	= Please wait... 
-page_no				= Total pages are : {0}
-pagination.page     = Page
-pagination.page_of  = Of
-pagination.page_view  = View
+site_login_title 		= WMS - Login
+meta_login_keywords 	=  weight,zara-weight,zara-login;
+meta_login_title 		=  wms-login;
+meta_login_desc 		=  Lorem Ipsum;
+loading_message 		= Please wait... 
+page_no					= Total pages are : {0}
+pagination.page     	= Page
+pagination.page_of  	= Of
+pagination.page_view 	 = View
 pagination.page_records  = records
 pagination.page_records_found  = Total ##total_records## records found
-click_me 			= Click Me
-select_file 		= Select File
-choose_file 		= Choose File
+click_me 				= Click Me
+select_file 			= Select File
+choose_file 			= Choose File
+
+
+multiplefile.remove		= x
+multiplefile.denied 	= You cannot select a $ext file.\nTry again...
+multiplefile.file   	= $file
+multiplefile.selected	= File selected: $file
+multiplefile.duplicate	= This file has already been selected:\n$file
+multiplefile.toomuch	= The files selected exceed the maximum size permited ($size)
+multiplefile.toomany	= Too many files selected (max: $max)
+multiplefile.toobig		= $file is too big (max $size)
