--- a/file/form_configuration.json
+++ b/file/form_configuration.json
@@ -149,7 +149,7 @@
 			{  
                "validation":"r",
                "tabIndex":"11",
-               "name":"DamageImage",
+               "name":"damageImage",
                "labelKey":"containerInventory.containerImage",
                "fileValidation":{  
                   "accept":"jpg|png",
